added the logic for the BFS graph tree creating. Creation of the Analysis impact REport