@@ -5,8 +5,7 @@ import com.monolithinsight.domain.ClassNode;
 import com.monolithinsight.domain.ImpactAnalysisReport;
 import com.monolithinsight.domain.ProjectGraph;
 
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -16,6 +15,10 @@ public class AnalyzeImpactUseCase {
             ProjectGraph graph,
             String changedClassId
     ) {
+
+        Set<String> visited =  new HashSet<>();
+        Queue<String> pending = new ArrayDeque<>();
+
         Map<String, ClassNode> nodesById =
                 graph.nodes().stream()
                         .collect(Collectors.toMap(
@@ -38,6 +41,30 @@ public class AnalyzeImpactUseCase {
                                 )
                         ));
 
-        return new ImpactAnalysisReport(List.of());
+        visited.add(changedClassId);
+        pending.add(changedClassId);
+
+
+        while(!pending.isEmpty()){
+
+            String currentId = pending.remove();
+
+            for(String adjacentClassId : reverseAdjacencyList.getOrDefault(currentId, Collections.emptyList())){
+                if (visited.add(adjacentClassId)) {
+                    pending.add(adjacentClassId);
+                }
+            }
+        }
+
+        visited.remove(changedClassId);
+
+        List<ClassNode> impactedClasses = visited
+                .stream()
+                .sorted()
+                .map(nodesById::get)
+                .toList();
+
+        return new ImpactAnalysisReport(impactedClasses);
+
     }
 }
